--- a/Practice12_09/Practice12_09/Practice12_09.vcxproj.filters
+++ b/Practice12_09/Practice12_09/Practice12_09.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\WeChat\WeChat Files\wxid_7880128801212\FileStorage\File\2023-12\practice12_09.c">
+    <ClCompile Include="..\..\..\..\WeChat\WeChat Files\wxid_7880128801212\FileStorage\File\2023-12\practice.c">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
